Fix alignment issue in the post page

--- a/static/sass/_pattern_post.scss
+++ b/static/sass/_pattern_post.scss
@@ -1,6 +1,6 @@
 @mixin kubeflow-news-p-post {
-  .p-post:first-child {
-    padding-top: 0rem;
-    margin-top: 0rem;
+  .p-post :first-child {
+    padding-top: 0;
+    margin-top: 0;
   }
 }
